# perceptron

./: .gitignore  CREDENTIALS_NEEDED.md  MULTI_SOURCE_INTEGRATION_SUMMARY.md  QUICKSTART.md  QUICKSTART_AUTH.md  README.md  SCOUT_SETUP_COMPLETE.md  SETUP_COMPLETE.md  STRIPE_INTEGRATION_COMPLETE.md  format-all.sh  start-all.sh  verify-setup.sh
backend/: .env.example  .gitignore  .pre-commit-config.yaml  CLEANUP_SUMMARY.md  MULTI_SOURCE_COMPLETE.md  README.md  README_PRODUCTION.md  add_all_sources.py  api_models.py  app.py  check_playwright.py  check_reprocess_status.sh  config.json  demo_integration.py  enable_playwright.py  fix_priority_selectors.py  format.sh  full_pipeline_demo.py  init_keywords_db.py  init_teams_db.py  keywords_api.py  payment_routes.py  peers_newsroom_apis.py  populate_multi_source_data.py  pyproject.toml  query_api_format.py  query_multi_source_keywords.py  reload_teams_config.py  reputation_apis.py  requirements.txt  run.sh  scheduler.py  scout_routes.py  scraping_sources.json  simple_integration_test.py  test_api.py  test_free_apis.py  test_github_debug.py  test_multi_source_integration.py  test_reputation_apis.py  (+2 more)
backend/archive/: demo_complete_pipeline.py  example_nlp_processing.py  fetch_historical_data.py  test_keyword_extraction.py
backend/auth/: __init__.py  cosmos_client.py  models.py  repository.py  repository_v2.py  routes.py  routes_v2.py  security.py  security_new.py  security_v2.py
backend/docs/: AUTHENTICATION_SETUP.md  AUTH_SUMMARY.md  COMMANDS.md  COMPLETE_PROCESSING.md  CONFIG_GUIDE.md  DATA_LAKE.md  FRONTEND_GUIDE.md  FRONTEND_QUICKSTART.md  GENERATING_API_OUTPUTS.md  INVESTIGATION_2025-11-08.md  KEYWORD_EXTRACTION.md  KEYWORD_EXTRACTION_PLAN.md  MULTI_SOURCE_INTEGRATION.md  NLP_PIPELINE.md  QUICKREF.md  README.md  ROADMAP.md  SINGLE_SOURCE_OF_TRUTH.md  SOCIAL_MEDIA_GUIDE.md  SOCIAL_MEDIA_STATUS.md  SOCIAL_MEDIA_SUMMARY.md  SOURCERS.md  STRIPE_SETUP.md  SUMMARY.md  (+2 more)
(+199 files in other folders)
