[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perceptron-backend"
version = "1.0.0"
description = "Perceptron Backend - NLP Pipeline for Keyword Analysis"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "pydantic==2.5.3",
    "sqlalchemy==2.0.44",
    "feedparser==6.0.11",
    "scikit-learn>=1.3.0",
    "spacy>=3.7.0",
    "yake>=0.4.8",
    "sentence-transformers>=2.2.0",
    "vaderSentiment>=3.3.2",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "black==23.12.1",
    "isort==5.13.2",
    "pre-commit==3.6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
